deployments/istio/mesh-security.yaml
# mesh-security.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: snisid-strict-mtls
  namespace: nexus-system
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: risk-placeholder-key
  namespace: nexus-system
spec:
  selector:
    matchLabels:
      app: risk-engine
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/nexus-system/sa/api-gateway"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: graph-service-allow-risk
  namespace: nexus-system
spec:
  selector:
    matchLabels:
      app: graph-service
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/nexus-system/sa/risk-engine"]
